--- a/.gitignore
+++ b/.gitignore
@@ -206,3 +206,10 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# Project-generated artifacts (preprocess/training outputs)
+survival_hsk/data/
+preprocessed_data_cache/
+checkpoints*/
+logs*/
+training_history.npy
