--- a/.gitignore
+++ b/.gitignore
@@ -223,3 +223,5 @@ artifacts/rest_13673_openrice_year_counts.csv
 artifacts/rest_13673_parquet_month_counts.csv
 artifacts/rest_13673_parquet_year_counts.csv
 artifacts/_tmp_review_img_emb.parquet
+artifacts/
+final_review_data/
